done exercise intro/01

--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <style>
+      .redheader {
+        color: white;
+        background-color: red;
+        font-size: 30px;
+        text-align: center;
+        font-weight: 700;
+
+      }
+
+      .sentence {
+        color: white;
+        background-color: green;
+        font-size: medium;
+
+      }
+      
+
+      button {
+        color: black;
+        background-color: orange;
+      }
+
+    </style>
   </head>
+
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div class="redheader"> Style me via the external method!</div>
+    <p class="sentence">I would like to be styled with the internal method, please.</p>
+    <button class="button">Inline Method</button>
   </body>
+
 </html>
